--- a/api.html
+++ b/api.html
@@ -224,7 +224,7 @@
 
             var sliderElectronics = document.getElementById("myRangeElectronics");
             var outputElectronics = document.getElementById("demoElectronics");
-            outputElectroincs.innerHTML = sliderElectronics.value; // Display the default slider value
+            outputElectronics.innerHTML = sliderElectronics.value; // Display the default slider value
 
             // Update the current slider value (each time you drag the slider handle)
             sliderElectronics.oninput = function() {
