--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <a rel="noreferrer noopener" target="_blank" href="borderBar.png">Red Border Image</a> <br>
  <a rel="noreferrer noopener" target="_blank" href="dollar.png">Dollar slider Image</a> <br>
  <a rel="noreferrer noopener" target="_blank" href="groceries.jpg">Groceries Image</a> <br>
- <a rel="noreferrer noopener" target="_blank" href="home.jpg">home Image</a> <br>
+ <a rel="noreferrer noopener" target="_blank" href="homeScreen.jpg">Home Image</a> <br>
  <a rel="noreferrer noopener" target="_blank" href="icon.png">Icon Image </a> <br>
 
 <!-- <a rel="noreferrer noopener" target="_blank" href=""></a> <br> -->
