--- a/api.html
+++ b/api.html
@@ -271,7 +271,7 @@
         </script>
         
         <h1>Summary</h1>
-        <div>  <img src="home.png" alt="home"
+        <div>  <img src="homeScreen.png" alt="home"
             style="width:100%; height:100%;">
              </div>
         </body>
